# ProcureAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  DECISIONS.md  Dockerfile  LICENSE  ProcureAgent_AI_Engineering_Design.md  README.md  TIMELINE.md  docker-compose.yml  pyproject.toml
demo/: app.py  architecture_view.py  demo_service.py  e2e_case_view.py  invoice_case_view.py  invoice_cases.json  model_lab_view.py  scenario_registry.py
docs/: DEMO_DEPLOYABILITY_REVIEW.md  DEMO_WALKTHROUGH.md  ENGINEERING_DELIVERY.md  HF_SPACES_DEPLOYMENT.md  LANGCHAIN_POLICY_RAG_COMPARISON.md  LOCAL_GRADIO_DEMO.md  OPEN_SOURCE_QUICKSTART.md  PHASE1_GPU_NOTEBOOK_RUNBOOK.md  PHASE3H_CONTROLLED_INTEGRATION_PLAN.md  PHASE3H_GUARDED_EXPLANATION_ARCHITECTURE.md  PHASE3_LORA_NOTEBOOK_RUNBOOK.md  PORTFOLIO_DEMO_DESIGN.md  PRIVACY_AND_DATA_BOUNDARIES.md  RESUME_PROJECT_DESCRIPTION.md  USER_PATHS.md  phase3j_structured_output_baseline.md  phase3k_evidence_citation_baseline.md  phase4a_productization_gap_audit.md  phase4c_user_facing_mvp_input_flow.md  phase4d_audit_report_export_review_ux.md  phase4e_product_mvp_architecture_realignment.md  phase4f1_layoutlmv3_runtime_asset_bundle.md  phase4f2_layoutlmv3_artifact_recovery.md  phase4f2_layoutlmv3_rebuild_plan.md  phase4f_local_live_extraction_spike.md  phase4g_ext_end_to_end_pipeline.md  phase4g_field_confirmation_design.md  phase4h_guarded_lora_rewrite_runtime.md
notebooks/: phase1_layoutlmv3_training.ipynb  phase3_lora_explainer_training.ipynb
procureguard/: config.py
requirements/: phase1-gpu.txt  phase3-lora.txt
samples/: README.md
scripts/: seed_demo_data.py
tests/: test_agent_rules.py  test_api.py  test_ci_workflow.py  test_demo_full_pipeline.py  test_demo_readiness.py  test_demo_seeded_procurement_context.py  test_docker_delivery_config.py  test_e2e_case_demo.py  test_e2e_case_evidence.py  test_e2e_demo_documentation.py  test_gpu_notebook_bootstrap.py  test_gpu_notebook_context.py  test_hf_space_package.py  test_invoice_case_demo.py  test_langchain_policy_benchmark.py  test_langchain_policy_demo.py  test_local_gradio_app.py  test_local_gradio_demo_service.py  test_local_gradio_demo_smoke.py  (+24 more)
(+274 files in other folders)
