[project]
name = "procureguard"
version = "0.1.0"
description = "ProcureGuard AI shared contract layer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
