[project]
name = "procureguard"
version = "0.1.0"
description = "ProcureGuard AI shared contract layer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "gradio>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
extraction = [
    "datasets>=2.19,<4.0",
    "huggingface-hub>=0.24,<1.0",
    "matplotlib>=3.8,<4.0",
    "paddleocr>=3.0,<4.0",
    "paddlepaddle>=3.0,<4.0",
    "pillow>=10.0,<12.0",
    "seqeval>=1.2,<2.0",
    "torch>=2.2,<3.0",
    "transformers>=4.40,<5.0",
]
phase1 = [
    "datasets>=2.19,<4.0",
    "huggingface-hub>=0.24,<1.0",
    "matplotlib>=3.8,<4.0",
    "paddleocr>=3.0,<4.0",
    "paddlepaddle>=3.0,<4.0",
    "pillow>=10.0,<12.0",
    "seqeval>=1.2,<2.0",
    "torch>=2.2,<3.0",
    "transformers>=4.40,<5.0",
]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["procureguard*"]
